examples/test/testpolicy14439.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14439
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key37: value18
      key26: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value5
      podSelector:
        matchLabels:
          key18: value31
          key11: value9
          key42: value19
